# LabelManager

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  STORAGE_GUIDE.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  files.py  images.py  projects.py  tags.py  tree.py
backend/app/core/: config.py  database.py  response.py
backend/app/models/: __init__.py  image.py  image_tag.py  project.py  tag.py
backend/app/schemas/: __init__.py  base.py  file.py  image.py  project.py  tag.py  tree.py
backend/app/services/: image_service.py  minio_service.py  tree_service.py
backend/app/services/persistence/: image_service.py
backend/app/services/storage/: base.py  local_storage_service.py  minio_service.py  storage_interface.py  storage_service.py
backend/app/utils/: web.py
frontend/: Dockerfile  components.d.ts  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: file.ts  project.ts  tags.ts  tree.ts
frontend/src/components/: NavigationMenu.vue  ProjectSelector.vue  TreeNode.vue
frontend/src/hooks/: useImageLazyLoad.ts
frontend/src/layout/: index.vue
frontend/src/router/: index.js
frontend/src/stores/: app.js  app.ts  tabs.ts  user.ts
frontend/src/types/: image.ts  index.ts  menu.ts  tag.ts
frontend/src/utils/: api.js  api.ts  messageBox.ts
frontend/src/views/: Home.vue  ImageGallery.vue  ProjectManagement.vue  TagManagement.vue  (+1 more)
lm-frontend/: README.md  components.d.ts  pnpm-lock.yaml  vite.config.ts
lm-frontend/src/: main.ts
(+24 files in other folders)
